kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: solar-system
  namespace: _{_NAMESPACE_}_

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - host: solar-system-_{_NAMESPACE_}_._{_INGRESS_IP_}_.nip.io

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: solar-system
                port:
                  number: 3000
